# cocoa-classifier

./: .gitignore  cli.py  cocoa_classifier.py  main.py  pyproject.toml  routes.py  shared_state.py
cocoa_classifier/: bean_segmenter.py  data_loader.py  feature_contourer.py  helpers.py  predictor.py  segment_params.py  trainer.py
schemas/: classifier_config.py  predict.py
